--- a/docs/api-reference/storefront/authentication.mdx
+++ b/docs/api-reference/storefront/authentication.mdx
@@ -39,6 +39,6 @@ When you first create a cart via:
 POST /api/v2/storefront/cart
 ```
 
-You'll receive a response containing an empty cart. This response also contains a `token` field.&#x20;
+You'll receive a response containing an empty cart. This response also contains a `token` field.
 
-You can store this token in the frontend session and pass it in a `X-Spree-Order-Token: {token}` header.&#x20;
+You can store this token in the frontend session and pass it in a `X-Spree-Order-Token: {token}` header.
