--- a/docs/developer/contributing/developing_spree.mdx
+++ b/docs/developer/contributing/developing_spree.mdx
@@ -10,7 +10,7 @@ description: >-
 
 Spree API is written in Ruby on Rails framework and is mounted into a Rails application as [a Rails Engine](https://guides.rubyonrails.org/engines.html).
 
-You don't need to be a Rails developer to work with Spree. You can install Spree via Spree Starter or Docker and not touch the underlying codebase at all and work only with the APIs.&#x20;
+You don't need to be a Rails developer to work with Spree. You can install Spree via Spree Starter or Docker and not touch the underlying codebase at all and work only with the APIs.
 
 ### Spree namespace
 
