--- a/docs/developer/customization/api_v2.mdx
+++ b/docs/developer/customization/api_v2.mdx
@@ -13,9 +13,9 @@ description: >-
 
 ### Customizing JSON response
 
-Spree uses J[SON API serializers](https://github.com/jsonapi-serializer/jsonapi-serializer) to represent data returned by API endpoints.&#x20;
+Spree uses J[SON API serializers](https://github.com/jsonapi-serializer/jsonapi-serializer) to represent data returned by API endpoints.
 
-You can easily swap OOTB Spree serializers with your own thanks to [Spree Dependencies](dependencies).&#x20;
+You can easily swap OOTB Spree serializers with your own thanks to [Spree Dependencies](dependencies).
 
 #### Adding custom attributes
 
