--- a/docs/developer/customization/dependencies.mdx
+++ b/docs/developer/customization/dependencies.mdx
@@ -50,7 +50,7 @@ Spree::Api::Dependencies.storefront_cart_add_item_service = 'MyNewAwesomeAddItem
 
 This will swap the default Cart serializer and Add Item to Cart service for your custom ones within all Storefront API endpoints that use those classes.
 
-&#x20;Values set in the initializer have to be strings, eg. \`'MyNewAwesomeAddItemToCart'\`
+Values set in the initializer have to be strings, eg. \`'MyNewAwesomeAddItemToCart'\`
 
 ## Application (global) customization
 
@@ -77,7 +77,7 @@ Spree::Api::Dependencies.storefront_cart_add_item_service = 'AnotherAddItemToCar
 
 The second line will have precedence over the first one, and the Storefront API will use `AnotherAddItemToCart` and the rest of the application will use `MyNewAwesomeAddItemToCart`
 
-&#x20;Values set in the initializer have to be strings, eg. `'MyNewAwesomeAddItemToCart'`
+Values set in the initializer have to be strings, eg. `'MyNewAwesomeAddItemToCart'`
 
 ## Default values
 
