--- a/docs/developer/customization/i18n.mdx
+++ b/docs/developer/customization/i18n.mdx
@@ -99,7 +99,7 @@ pt-BR:
     say_yes: "Sim"
 ```
 
-&#x20;All translations for Spree are "namespaced" within the `spree` key so that they don't conflict with translations from other parts of the parent application.
+All translations for Spree are "namespaced" within the `spree` key so that they don't conflict with translations from other parts of the parent application.
 
 Please submit Pull Requests or issues directly to [Spree I18n](https://github.com/spree/spree\_i18n) for missing translations.
 
@@ -107,7 +107,7 @@ Please submit Pull Requests or issues directly to [Spree I18n](https://github.co
 
 Spree maintains its localization information in a YAML file using a naming convention similar to that of the Rails project. Each of the localization filenames contains a prefix representing the language code of the locale. For example, the Russian translation is contained in `config/locales/ru.yml`.
 
-&#x20;Spree has over 43 locale files and counting. See the \[GitHub Repository]\(https://github.com/spree/spree\_i18n/tree/master/config/locales) for a complete list.
+Spree has over 43 locale files and counting. See the \[GitHub Repository]\(https://github.com/spree/spree\_i18n/tree/master/config/locales) for a complete list.
 
 ### Required Files
 
