--- a/docs/developer/customization/storefront.mdx
+++ b/docs/developer/customization/storefront.mdx
@@ -1,7 +1,7 @@
 # Storefront
 
 <Note>
-This section covers the Rails storefront which was extracted to [`spree_frontend`](https://github.com/spree/spree_rails_frontend) ruby gem.&#x20;
+This section covers the Rails storefront which was extracted to [`spree_frontend`](https://github.com/spree/spree_rails_frontend) ruby gem.
 </Note>
 
 ## Styling with SASS variables
@@ -363,7 +363,7 @@ To replace an entire stylesheet as provided by Spree you simply need to create a
 
 For example, to replace `spree/frontend/all.css` you would save the replacement to `your_app/vendor/assets/stylesheets/spree/frontend/all.css`.
 
-&#x20;This same method can also be used to override stylesheets provided by third-party extensions.
+This same method can also be used to override stylesheets provided by third-party extensions.
 
 ### Overriding individual JavaScript functions
 
@@ -413,7 +413,7 @@ To replace an entire JavaScript file as provided by Spree you simply need to cre
 
 For example, to replace `spree/frontend/all.js` you would save the replacement to `your_app/vendor/assets/javascripts/spree/frontend/all.js`.
 
-&#x20;This same method can be used to override JavaScript files provided by third-party extensions.
+This same method can be used to override JavaScript files provided by third-party extensions.
 
 ## SEO recommendations
 
