--- a/docs/developer/getting-started/installation.mdx
+++ b/docs/developer/getting-started/installation.mdx
@@ -20,7 +20,7 @@ Windows users will need to [install the Linux subsystem](https://docs.microsoft.
 
 You now have a functional Spree application after running only a few commands!
 
-To stop the web server, hit `Ctrl-C` in the terminal window where it's running.&#x20;
+To stop the web server, hit `Ctrl-C` in the terminal window where it's running.
 
 ### Logging Into the Admin Panel
 
