--- a/docs/developer/security/pci_compliance.mdx
+++ b/docs/developer/security/pci_compliance.mdx
@@ -4,7 +4,7 @@ All store owners wishing to process credit card transactions should be familiar 
 
 ### Using payment tokens
 
-We do not transmit or store Credit Card numbers. Instead we're using payment processor tokens supplied by their SDKs to authorize and charge customer cards.&#x20;
+We do not transmit or store Credit Card numbers. Instead we're using payment processor tokens supplied by their SDKs to authorize and charge customer cards.
 
 ### 3-D Secure and Strong Customer Authentication support
 
