--- a/docs/developer/upgrades/upgrades/4.3-to-4.4.mdx
+++ b/docs/developer/upgrades/upgrades/4.3-to-4.4.mdx
@@ -120,7 +120,7 @@ Webhooks do not fire on touch events. Webhooks also do not do anything until the
 
 ### Update Spree SDK
 
-To use the new features such as Wishlists and Digital Products in your storefront please update [Spree SDK](https://github.com/spree/spree-storefront-api-v2-js-sdk) to [v4.12](https://github.com/spree/spree-storefront-api-v2-js-sdk/releases/tag/v4.12.0) at least.&#x20;
+To use the new features such as Wishlists and Digital Products in your storefront please update [Spree SDK](https://github.com/spree/spree-storefront-api-v2-js-sdk) to [v4.12](https://github.com/spree/spree-storefront-api-v2-js-sdk/releases/tag/v4.12.0) at least.
 
 ### Update Spree Dependencies that was renamed
 
