--- a/docs/developer/upgrades/upgrades/4.5-to-4.6.mdx
+++ b/docs/developer/upgrades/upgrades/4.5-to-4.6.mdx
@@ -56,7 +56,7 @@ bin/rake railties:install:migrations
 bin/rails db:migrate
 ```
 
-Note: If you didn't use spree\_globalize before, this will install migrations that move some columns from spree\_products, spree\_taxons, to dedicated translation tables -> spree\_products\_translations, spree\_taxons\_translations etc.&#x20;
+Note: If you didn't use spree\_globalize before, this will install migrations that move some columns from spree\_products, spree\_taxons, to dedicated translation tables -> spree\_products\_translations, spree\_taxons\_translations etc.
 
 If you're using raw SQL queries (either in the application code, or running in external tools), you may need to review the new structure and update your queries accordingly.
 
