--- a/docs/developer/core-concepts/products.mdx
+++ b/docs/developer/core-concepts/products.mdx
@@ -4,29 +4,42 @@ title: Products
 
 ## Overview
 
-`Product` records track unique products within your store. These differ from [Variants](products#variants), which track the unique variations of a product. For instance, a product that's a T-shirt would have variants denoting its different colors. Together, Products and Variants describe what is for sale. Note that as of version 4.6, certain product fields are translatable (read more about this in [Internationalization](../customization/i18n#resource-translations)).
+`Product` records track unique products within your store. These differ from [Variants](products#variants), which track the unique variations of a product. For instance, a product that's a T-shirt would have variants denoting its different colors and sizes. Together, Products and Variants describe what is for sale. 
+
+<Info>
+Note that as of version 4.6, certain product fields are translatable (read more about this in [Internationalization](../customization/i18n#resource-translations)).
+</Info>
 
 Products have the following attributes:
 
-* `name`: short name for the product _\[translatable]_
-* `description`: The most elegant, poetic turn of phrase for describing your product's benefits and features to your site visitors _\[translatable]_
-* `slug`: An SEO slug based on the product name that is placed into the URL for the product _\[translatable]_
-* `available_on`: The first date the product becomes available for sale online in your shop. If you don't set the `available_on` attribute, the product will not appear among your store's products for sale.
-* `discontinue_on`: Date when the product will become unavailable for sale online in your shop
-* `deleted_at`: The date the product is marked as deleted
-* `meta_title`: Optional title used for search engines instead of `name` _\[translatable]_
-* `meta_description`: A description targeted at search engines for search engine optimization (SEO) _\[translatable]_
-* `meta_keywords`: Several words and short phrases separated by commas, also targeted at search engines _\[translatable]_
+| Attribute         | Description                                                                                           | Translatable |
+|-------------------|-------------------------------------------------------------------------------------------------------|--------------|
+| `name`            | Short name for the product                                                                            | Yes          |
+| `description`     | The most elegant, poetic turn of phrase for describing your product's benefits and features          | Yes          |
+| `slug`            | SEO slug based on the product name that is placed into the URL for the product. We use a library called [friendly_id](https://github.com/norman/friendly_id) to generate them                     | Yes          |
+| `status`          | The status of the product. Can be `draft`, `active`, `archived`. Defaults to `draft`. | No           |
+| `available_on`    | The first date the product becomes available for sale online in your shop                            | No           |
+| `discontinue_on`  | Date when the product will become unavailable for sale online in your shop                            | No           |
+| `deleted_at`      | The date the product is marked as deleted. We don't remove products entirely, only soft deleting them using a library called                                                              | No           |
+| `meta_title`      | Optional title used for search engines instead of `name`                                              | Yes          |
+| `meta_description`| A description targeted at search engines for search engine optimization (SEO)                         | Yes          |
+| `meta_keywords`   | Several words and short phrases separated by commas, also targeted at search engines                  | Yes          |
 
 To understand how variants come to be, you must first understand option types and option values.
 
 ## Option Types and Option Values
 
-Option types denote the different options for a variant. A typical option type would be a size, with that option type's values being something such as "Small", "Medium" and "Large". Another typical option type could be a color, such as "Red", "Green", or "Blue".
+Option types denote the different options for a variant.
 
-A product can be assigned many option types, but must be assigned at least one if you wish to create variants for that product.&#x20;
+A typical option type would be a `size`, with that option type's values being something such as `Small`, `Medium` and `Large`. 
 
+Another typical option type could be a `color`, such as `Red`, `Green`, or `Blue`.
+
+A product can be assigned many option types, but must be assigned at least one if you wish to create variants for that product
+
+<Info>
 The `name` and `presentation` fields for option types are translatable as of version 4.6.
+</Info>
 
 ## Variants
 
@@ -36,15 +49,21 @@ Variant records can track some individual properties regarding a variant, such a
 
 ### Master Variants
 
-Every single product has a master variant, which tracks basic information such as a count on hand, a price and a SKU. Whenever a product is created, a master variant for that product will be created too.
+Every single product has a master variant, which tracks basic information such as a count on hand, a price and a <Tooltip tip="Stock Keeping Unit - In inventory management, a stock keeping unit (abbreviated as SKU) is the unit of measure in which the stocks of a material are managed.">SKU</Tooltip>. 
+
+Whenever a product is created, a master variant for that product will be created too. 
+
+<Info>
+Logic behind is implemented in the `after_initialize` callback of the `Spree::Product` model in a [ensure_master](https://github.com/spree/spree/blob/d3927a3f646f0b4e72b137bf72606c885ec59829/core/app/models/spree/product.rb#L132) method.
+</Info>
 
 Master variants are automatically created along with a product and exist for the sole purpose of having a consistent API when associating variants and [line items](orders#line-items). If there were no master variant, then line items would need to track a polymorphic association which would either be a product or a variant.
 
-By having a master variant, the code within Spree to track is simplified.
+### Regular Variants
 
-### Normal Variants
+Variants which are not the master variant are unique based on a [option type and option value](products#option-types-and-option-values) combinations.
 
-Variants which are not the master variant are unique based on [option type and option value](products#option-types-and-option-values) combinations. For instance, you may be selling a product which is a Baseball Jersey, which comes in the sizes "Small", "Medium" and "Large", as well as in the colors of "Red", "Green" and "Blue". For this combination of sizes and colors, you would be able to create 9 unique variants:
+For instance, you may be selling a product which is a Baseball Jersey, which comes in the sizes "Small", "Medium" and "Large", as well as in the colors of "Red", "Green" and "Blue". For this combination of sizes and colors, you would be able to create 9 unique variants:
 
 * Small, Red
 * Small, Green
@@ -56,15 +75,43 @@ Variants which are not the master variant are unique based on [option type and o
 * Large, Green
 * Large, Blue
 
+Each Variant should have it own unique SKU.
+
 ### Default Variant
 
-To simplify things you can call `product.default_variant` to get the default Variant. If a product has multiple Variants it will return the first non-master Variant based on their sort position set in the Admin Panel. If there are no non-master Variants it will return the Master Variant.
+To simplify things you can call `product.default_variant` to get the default Variant. If a product has multiple Variants it will return the first non-master Variant based on their sort position set in the Admin Panel or Platform API.
+
+If there are no non-master Variants it will return the Master Variant.
 
 ## Images
 
-Images link to a product through its master variant. The sub-variants for the product may also have their own unique images to differentiate them in the frontend.
+Images can be associated to the  Product (via master variant) or to the individual Variants.
 
-Spree automatically handles the creation and storage of several size versions of each image (via Active Storage). See [Images Customization](../customization/images) section.
+Product images can be fetched via:
+
+```ruby
+product.images
+```
+
+To get all images for product and all it's variants, call `variant_images` on the product:
+
+```ruby
+product.variant_images
+```
+
+To fetch individual variant images, call `images` on the variant:
+
+```ruby
+product.default_variant.images
+```
+
+Image order is determined by the `position` attribute, which is an integer. By default, images are ordered from left to right.
+
+<Info>
+Under the hood we use [Rails Active Storage](https://guides.rubyonrails.org/active_storage_overview.html) to handle image storage and manipulation.
+
+More information about images can be found in the [Images Customization](../customization/images) section.
+</Info>
 
 ## Product Properties
 
@@ -74,7 +121,7 @@ A `Property` should not be confused with an [`OptionType`](products#option-types
 
 You can retrieve the value for a property on a `Product` object by calling the `property` method on it and passing through that property's name:
 
-```bash
+```ruby
 product.property("material")
 => "100% Cotton"
 ```
@@ -87,65 +134,96 @@ product.set_property("material", "100% cotton")
 
 If this property doesn't already exist, a new `Property` instance with this name will be created.
 
+<Info>
 As of version 4.6, product property `value` and `filter_param` fields are translatable.
+</Info>
 
 ## Prices
 
-`Price` objects track a price for a particular currency and variant combination. For instance, a [Variant](products#variants) may be available for $15 (15 USD) and €7 (7 Euro).
+`Price` objects track a price for a particular currency and variant combination. For instance, a [Variant](products#variants) may be available for $15 (`15 USD`) and €7 (`7 Euro`).
 
-Spree behind the scenes uses [Ruby Money gem](https://github.com/RubyMoney/money) with some [additional](https://github.com/spree/spree/blob/master/core/app/models/concerns/spree/display\_money.rb) [tweaks](https://github.com/spree/spree/blob/master/core/lib/spree/money.rb).
+`Price` object contains 3 important attributes:
 
-If a product doesn't have a price in the selected currency it won't show up in the Storefront API by default.&#x20;
+| Attribute         | Description                                                                                   | Example Value         |
+|-------------------|-----------------------------------------------------------------------------------------------|-----------------------|
+| `amount`          | The current selling price of the variant in the specified currency.                           | `99.90`             |
+| `compare_at_amount` | The recommended retail price of the variant in the specified currency. This can be used to display crossed out prices in the storefront. | `129.90`             |
+| `currency`        | The ISO code for the currency in which the `amount` and `compare_at_amount` are denominated. | `USD`                 |
+
+<Warning>
+If a product doesn't have a price in the selected currency it won't show up in the Storefront and Storefront API by default.
+</Warning>
 
 To fetch a list of currencies that given product is available in, call `prices` to get a list of related `Price` objects:
 
-```bash
+```ruby
 product.prices
 => [#<Spree::Price id: 2 ...]
 ```
 
 To find a list of currencies that Variant is available in, call `prices` to get a list of related `Price` objects:
 
-```bash
+```ruby
 product.default_variant.prices
 => [#<Spree::Price id: 2 ...]
 ```
 
 To find Product price in a selected currency via [ISO symbol](https://www.iban.com/currency-codes):
 
-```bash
+```ruby
 product.price_in('EUR')
 => #<Spree::Price id: 232, variant_id: 232, amount: 0.8499e2, currency: "EUR", deleted_at: nil, created_at: "2021-08-16 19:41:55.888522000 +0000", updated_at: "2021-08-16 19:41:55.888522000 +0000", compare_at_amount: nil, preferences: nil>
 ```
 
-If there's no price set for this currency this will return a `Price.new(currency: 'EUR')` object.
+<Note>
+If there's no price set for requested currency this will return a new Price object with the currency set to the requested currency. It will not be a persisted object.
+</Note>
 
 To find Variant's price in a selected currency:
 
-```bash
+```ruby
 product.default_variant.price_in('EUR')
 => #<Spree::Price id: 232, variant_id: 232, amount: 0.8499e2, currency: "EUR", deleted_at: nil, created_at: "2021-08-16 19:41:55.888522000 +0000", updated_at: "2021-08-16 19:41:55.888522000 +0000", compare_at_amount: nil, preferences: nil>
 ```
 
 There are also other helpful methods available such as:
 
-#### Getting amount (number)
+<AccordionGroup>
+  <Accordion title="Getting amount (number)">
+  
+  ```ruby
+  product.default_variant.amount_in('EUR')
+   => 0.8499e2
+  ```
+  
+  </Accordion>
+  <Accordion title="Getting amount (string)">
+  
+  ```ruby
+  product.default_variant.amount_in('EUR').to_s
+   => "84.99"
+  ```
+  
+  </Accordion>
+  <Accordion title="Displaying price with currency symbol">
+  
+  ```ruby
+  product.price_in('EUR').display_amount.to_s
+   => "€84.99"
+  ```
+  
+  </Accordion>
+</AccordionGroup>
 
-```
-product.default_variant.amount_in('EUR')
- => 0.8499e2
-```
-
-#### Getting amount (string)
-
-```
-product.default_variant.amount_in('EUR').to_s
- => "84.99"
-```
+<Info>
+Spree behind the scenes uses [Ruby Money gem](https://github.com/RubyMoney/money) with some [additional](https://github.com/spree/spree/blob/master/core/app/models/concerns/spree/display\_money.rb) [tweaks](https://github.com/spree/spree/blob/master/core/lib/spree/money.rb).
+</Info>
 
 ## Prototypes
 
-A prototype is a useful way to share common `OptionType` and `Property` combinations amongst many different products. For instance, if you're creating a lot of shirt products, you may wish to maintain the "Size" and "Color" option types, as well as a "Fitting Type" property.
+A prototype is a useful way to share common `OptionType` and `Property` combinations amongst many different products. They work as a product template to speed up the creation of new products.
+
+For instance, if you're creating a lot of clothing products, you may wish to maintain the "Size" and "Color" option types, as well as a "Fitting Type" property.
 
 ## Taxons and Taxonomies
 
@@ -162,6 +240,17 @@ Taxons use the [Nested set model](http://en.wikipedia.org/wiki/Nested\_set\_mode
 
 Taxons link to products through an intermediary model called `Classification`. This model exists so that when a product is deleted, all of the links from that product to its taxons are deleted automatically. A similar action takes place when a taxon is deleted; all of the links to products are deleted automatically.
 
-Linking to a taxon in a controller or a template should be done using the `spree.nested_taxons_path` helper, which will use the taxon's permalink to generate a URL such as `/t/categories/brand`.
+<Note>
+Storefront uses `spree.nested_taxons_path` helper method to generate full taxon URLs, which will use the taxon's permalink, eg. 
 
+```ruby
+taxon = Spree::Taxon.find_by(permalink: 'clothes/dresses')
+spree.nested_taxons_path(taxon)
+```
+
+which will output `/t/categories/clothes/dresses`.
+</Note>
+
+<Info>
 As of version 4.6, the taxon `name` and `description` fields are translatable.
+</Info>
