payments guide added

--- a/docs/developer/extensions/extensions.mdx
+++ b/docs/developer/extensions/extensions.mdx
@@ -82,7 +82,7 @@ A virtual gift card solution
 
 ### [Mirakl](https://github.com/ShopFelixGray/spree_mirakl_api)
 
-Spree intergration for Mirakl API
+Spree integration for Mirakl API
 
 ### [Multi Vendor](https://github.com/spree-contrib/spree_multi_vendor)
 
