--- a/docs/user-guide/content-management/add-items-to-a-menu.mdx
+++ b/docs/user-guide/content-management/add-items-to-a-menu.mdx
@@ -32,7 +32,7 @@ The image below shows how the Spree Main Menu uses two containers, one outlined 
 
 For more information on using the Spree Main Menu visit the [Building The Main Menu](building-the-main-menu) page.
 
-![Contianers With Code](/images/image%20%2855%29.png)
+![Containers With Code](/images/image%20%2855%29.png)
 
 ### [Nest Under](add-items-to-a-menu#nest-under) <a id="nest-under"></a>
 
