--- a/docs/user-guide/content-management/building-the-main-menu.mdx
+++ b/docs/user-guide/content-management/building-the-main-menu.mdx
@@ -23,7 +23,7 @@ In the image below you can see that we named our menu item Women and linked to t
 2. From the options set **Item Type:** `Container`, **Code:** `category`, **Nested under:** `Women`, you can name this menu item anything you like, and then click **Create**.
 3. Once your item is saved click **Main Menu** from the breadcrumbs at the top of the screen to take you back to the **Edit Menu** screen.
 
-The promotions container used in the Spree mega menu is exactly the same as the Catagories container, except it uses the **Code:** `promo`, go ahead and repeat the three steps above replacing the code `categories` with `promo`.
+The promotions container used in the Spree mega menu is exactly the same as the Categories container, except it uses the **Code:** `promo`, go ahead and repeat the three steps above replacing the code `categories` with `promo`.
 
 In the image below you can see we now have two containers nested under the Women link that we created earlier, we named our containers **Categories** and **Promotions**, they are of the type container and have the appropriate codes.
 
