--- a/docs/developer/contributing/index.mdx
+++ b/docs/developer/contributing/index.mdx
@@ -19,7 +19,7 @@ You can [submit an issue](https://github.com/spree/spree/issues/new/choose) on o
 
 ## Fixing a bug or creating a new feature
 
-Before diving into the Spree codebase we recommend you spend some time reviewing the [Internals section](../internals/stores) which will help you understand how Spree works under the hood.
+Before diving into the Spree codebase we recommend you spend some time reviewing the [Internals section](/core-concepts/stores) which will help you understand how Spree works under the hood.
 
 After you're done with that please follow to [Developing Spree guide](developing_spree)
 
