--- a/docs/developer/core-concepts/stores.mdx
+++ b/docs/developer/core-concepts/stores.mdx
@@ -10,7 +10,9 @@ The `Spree::Store` model is the center of the Spree ecosystem. Each Spree instal
 * Store B, `eu.example.com`
 * Store C, `another-brand.com`
 
+<Frame type="glass" caption="Spree multi-store setup">
 ![](/images/mulit\_store\_978x2.png)
+</Frame>
 
 ### Store attributes
 
