--- a/docs/developer/extensions/extensions_tutorial.mdx
+++ b/docs/developer/extensions/extensions_tutorial.mdx
@@ -30,7 +30,7 @@ cd spree_simple_sales
 
 ## Adding a Sale Price to Variants
 
-The first thing we need to do is create a migration that adds a sale\_price column to [variants](../internals/products#variants).
+The first thing we need to do is create a migration that adds a sale\_price column to [variants](/core-concepts/products#variants).
 
 We can do this with the following command:
 
