--- a/docs/developer/getting-started/architecture.mdx
+++ b/docs/developer/getting-started/architecture.mdx
@@ -4,7 +4,9 @@ As many Rails applications Spree requires a rational database to run. Spree supp
 
 ### Core gems
 
+<Info>
 These gems are the core of Spree and they are the most important part of the Spree platform. They are the building blocks that make Spree possible.
+</Info>
 
 <AccordionGroup>
   <Accordion title="Core">
