--- a/docs/developer/customization/checkout.mdx
+++ b/docs/developer/customization/checkout.mdx
@@ -12,7 +12,7 @@ The customization of the flow of the checkout can be done by using Spree's `chec
 
 ## Default Checkout Steps
 
-The Spree checkout process consists of the following steps. With the exception of the Registration step, each of these steps corresponds to a state of the [Order object](../internals/orders):
+The Spree checkout process consists of the following steps. With the exception of the Registration step, each of these steps corresponds to a state of the [Order object](/core-concepts/orders):
 
 * Registration \(Optional - only if using [spree\_auth\_devise](https://github.com/spree/spree_auth_devise) extension, can be toggled through the `Spree::Auth::Config[:registration_step]` configuration setting\)
 * Address Information
@@ -43,7 +43,7 @@ def check_registration
 end
 ```
 
-The configuration of the guest checkout option is done via [Preferences](../internals/preferences). Spree will allow guest checkout by default. Use the `allow_guest_checkout` preference to change the default setting.
+The configuration of the guest checkout option is done via [Preferences](/core-concepts/preferences). Spree will allow guest checkout by default. Use the `allow_guest_checkout` preference to change the default setting.
 
 ### Address Information
 
@@ -55,7 +55,7 @@ The address fields include a select box for choosing state/province. The list of
 
  The state field can be disabled entirely by using the \`Spree::Config\[:address\_requires\_state\]\` preference. You can also allow for an "alternate phone" field by using the \`Spree::Config\[:alternative\_shipping\_phone\]\` and \`Spree::Config\[:alternative\_shipping\]\` fields.
 
-The list of countries that appear in the country select box can also be configured. Spree will list all countries by default, but you can configure exactly which countries you would like to appear. The list can be limited to a specific set of countries by [setting the Store's checkout zone](../internals/stores#checkout-configuration). Spree assumes that the list of billing and shipping countries will be the same. You can always change this logic via an extension if this does not suit your needs.
+The list of countries that appear in the country select box can also be configured. Spree will list all countries by default, but you can configure exactly which countries you would like to appear. The list can be limited to a specific set of countries by [setting the Store's checkout zone](/core-concepts/stores#checkout-configuration). Spree assumes that the list of billing and shipping countries will be the same. You can always change this logic via an extension if this does not suit your needs.
 
 ### Delivery Options
 
@@ -73,7 +73,7 @@ If you do not want to use a gateway with payment profiles then you will need to 
 
  Spree discards the credit card number after this step is processed. If you do not have a gateway with payment profiles enabled then your card information will be lost before it's time to authorize the card.
 
-For more information about payments, please see the [Payments guide](../internals/payments).
+For more information about payments, please see the [Payments guide](/core-concepts/payments).
 
 ### Confirmation
 
